오늘의밥상추가 및 메인, 레이아웃 수정

--- a/html/common/header.html
+++ b/html/common/header.html
@@ -50,11 +50,12 @@
       <button type="button" class="btn-menu"></button>
       <ul>
         <li><a href="javascript:void(0);">이벤트/쿠폰</a></li>
+        <li><a href="javascript:void(0);">기획/번들</a></li>
         <li><a href="javascript:void(0);">타임세일</a></li>
         <li><a href="javascript:void(0);">전단상품</a></li>
-        <li><a href="javascript:void(0);">베스트</a></li>
         <li><a href="javascript:void(0);">세일중</a></li>
-        <li><a href="javascript:void(0);">식자재</a></li>
+        <li><a href="javascript:void(0);">카테고리</a></li>
+        <li><a href="javascript:void(0);">오늘의밥상</a></li>
       </ul>
     </nav>      
   </header>
