--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
       ["", "55.새배송지추가", "", "html/41-1.pop-delivery-add.html", "41-1과 동일"],      
       ["", "56.정기구독형판매", "", "html/56.subscription-type.html", ""],      
       ["", "57.정기구독형_마이페이지", "", "html/57.subscription-my.html", ""],      
-      ["", "58.전단보기", "", "html/58.pop-leaflet.html", ""],      
+      ["", "58.전단보기", "", "html/58.pop-leaflet.html", ""],     
+      ["", "59.오늘의밥상", "", "html/59.total-meal.html", ""],       
+      ["", "60.오늘의밥상", "", "html/60.total-meal-detail.html", ""],       
       
     ]
 
