--- a/html/common/footer.html
+++ b/html/common/footer.html
@@ -93,13 +93,13 @@
         <span class="bar"></span>
         <a href="javascript:void(0);">이용약관</a>
       </div>
+      <div class="footer-logo"><img src="../images/common/logo.png" alt="하이웨이마트"></div>
       <ul class="footer-sns">
         <li><a href="javascript:void(0);"><i class="ico-sns-facebook"></i></a></li>
         <li><a href="javascript:void(0);"><i class="ico-sns-cafe"></i></a></li>
         <li><a href="javascript:void(0);"><i class="ico-sns-youtube"></i></a></li>
         <li><a href="javascript:void(0);"><i class="ico-sns-instagram"></i></a></li>
       </ul>
-      <div class="footer-logo"><img src="../images/common/logo.png" alt="하이웨이마트"></div>				
       <!-- 회사 정보 -->
       <div class="footer-info">
         <div class="footer-info-list">    
@@ -107,7 +107,7 @@
             <li>하이웨이마트 수지성복점</li>
           </ul>
           <ul>
-            <li class="inline">대표이사 : 유판석</li>
+            <li>대표이사 : 유판석</li>
             <li class="inline">경기도용인시 수지구 성복2로 110</li>
             <li>
               사업자등록번호 : 123-45-67890
@@ -127,10 +127,10 @@
         </div>
         <p class="copyright">Copyright ⓒ HIGHWAYMART. All right reserved.</p>
       </div>
-      <div class="footer-quick-menu">
+      <!-- <div class="footer-quick-menu">
         <a href="javascript:void(0);">고객센터</a>
         <a href="javascript:void(0);">PC화면</a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <!-- // footer -->
